[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontodiff"
version = "0.1.0"
description = "Curious Self-Write-Gate + Auto-Ontographs"
authors = [{name="Kai Systems"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
